# Youtube-dwn-rs

./: Cargo.toml  README.md  license
src/: args.rs  lib.rs
src/loader/: http_getter.rs  mod.rs  video_loader.rs
src/parser/: mod.rs  youtube.rs
