[package]
version = "0.1.0"
edition = "2021"

name = "yt-down"
description = "Simple youtube video downloader on rust with curl"
keywords = ["Download", "Youtube"]
categories = ["multimedia"]
authors = ["Blinc"]

readme = "README.md"
license = "MIT"

repository = "https://github.com/Blinc13/Youtube-dwn-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11.2"

#ffmpeg-next = "5.1.1"
curl = "0.4.44"
json = "0.12.4"

clap = {version = "4.0.11", features = ["derive", "unicode"]}